--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "^5.0.0-beta2",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
